* complex.c (string_to_c_internal): support scientific notation.   patched by Tinco Andringa. https://github.com/ruby/ruby/pull/16   [ruby-core:36046][Bug #4655]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@31492 b2dd03c8-39d4-4d8f-98ff-823fe69b080e